# GitRepositoryManager

./: CMakeLists.txt  README.md
design/: git_status.txt  requirement.txt
manual/: manual.txt
sample/: sample  sample.cpp  terminal  terminal.cpp
src/: CMakeLists.txt  GitRepositoryManager.cpp  common.cpp  common.hpp  functions.cpp  functions.hpp  grm.cpp
tmp/: check_result.json  repository_abspath_list.txt
